--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ Pillow==5.3.0
 pyexcel-xls==0.5.7
 PyMuPDF==1.14.2
 PyMySQL==0.9.3
+PyYAML==4.2b1
 pytest==3.3.2
 python-box==3.2.0
 python-docx==0.8.6
